Se agregó tag de Google Analytics

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <title>Generador de CURP</title>
 </head>
 <!-- Google tag (gtag.js) -->
-<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-SRJS9L3FLT"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2961HDGVK9"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-SRJS9L3FLT');
-</script> -->
+  gtag('config', 'G-2961HDGVK9');
+</script>
 <body>
     <div class="h-container">
         <div class="contenedor">
