Se modificaron los estilos

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
                     </p>
                     <ul>
                         <li>Los campos con <span class="obligatorio">*</span> son obligatorios.</li>
-                        <li>Evita el uso de acentos y caracteres especiales (comas, puntos, guiones, ).</li>
+                        <li>Evita el uso de acentos y caracteres especiales (comas, puntos, guiones, diéresis, etc.).</li>
                         <li>Puedes utilizar Ñ.</li>
                         <li>El CURP generado no es oficial.</li>
                         <li>Este sitio no almacena ningún dato ingresado.</li>
-                        <li>Puedes reportar cualquier falla o anomalía en el cálculo al área de estadística.</li>
+                        <li>Puedes reportar cualquier falla o anomalía en el cálculo al correo <a href="mailto:rodriguez.robles93@gmail.com">rodriguez.robles93@gmail.com</a>.</li>
                     </ul>
                     <p class="version">Versión 1.5</p>
                 </div>
