Se agregaron las claves de los estados

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <li>Este sitio no almacena ningún dato ingresado.</li>
                         <li>Puedes reportar cualquier falla o anomalía en el cálculo al correo <a href="mailto:rodriguez.robles93@gmail.com">rodriguez.robles93@gmail.com</a>.</li>
                     </ul>
-                    <p class="version">Versión 1.5.1</p>
+                    <p class="version">Versión 1.5.2</p>
                 </div>
             </div>
             <form action="" class="main formulario">
@@ -126,39 +126,39 @@
                 <div class="label-input-container" id="special_4">
                     <select id="Entidad_Nacimiento">
                         <option value="" disabled selected required hidden></option>
-                        <option value="AS">01.- Aguascalientes</option>
-                        <option value="BC">02.- Baja California</option>
-                        <option value="BS">03.- Baja California Sur</option>
-                        <option value="CC">04.- Campeche</option>
-                        <option value="CL">05.- Coahuila de Zaragoza</option>
-                        <option value="CM">06.- Colima</option>
-                        <option value="CS">07.- Chiapas</option>
-                        <option value="CH">08.- Chihuahua</option>
-                        <option value="DF">09.- Ciudad de México</option>
-                        <option value="DG">10.- Durango</option>
-                        <option value="GT">11.- Guanajuato</option>
-                        <option value="GR">12.- Guerrero</option>
-                        <option value="HG">13.- Hidalgo</option>
-                        <option value="JC">14.- Jalisco</option>
-                        <option value="MC">15.- Estado de México</option>
-                        <option value="MN">16.- Michoacán</option>
-                        <option value="MS">17.- Morelos</option>
-                        <option value="NT">18.- Nayarit</option>
-                        <option value="NL">19.- Nuevo León</option>
-                        <option value="OC">20.- Oaxaca</option>
-                        <option value="PL">21.- Puebla</option>
-                        <option value="QT">22.- Querétaro</option>
-                        <option value="QR">23.- Quintana Roo</option>
-                        <option value="SP">24.- San Luis Potosí</option>
-                        <option value="SL">25.- Sinaloa</option>
-                        <option value="SR">26.- Sonora</option>
-                        <option value="TC">27.- Tabasco</option>
-                        <option value="TS">28.- Tamaulipas</option>
-                        <option value="TL">29.- Tlaxcala</option>
-                        <option value="VZ">30.- Veracruz</option>
-                        <option value="YN">31.- Yucatán</option>
-                        <option value="ZS">32.- Zacatecas</option>
-                        <option value="NE">33.- Nacido en el extranjero</option>
+                        <option value="AS">01.- Aguascalientes (AS)</option>
+                        <option value="BC">02.- Baja California (BC)</option>
+                        <option value="BS">03.- Baja California Sur (BS)</option>
+                        <option value="CC">04.- Campeche (CC)</option>
+                        <option value="CL">05.- Coahuila de Zaragoza (CL)</option>
+                        <option value="CM">06.- Colima (CM)</option>
+                        <option value="CS">07.- Chiapas (CS)</option>
+                        <option value="CH">08.- Chihuahua (CH)</option>
+                        <option value="DF">09.- Ciudad de México (DF)</option>
+                        <option value="DG">10.- Durango (DG)</option>
+                        <option value="GT">11.- Guanajuato (GT)</option>
+                        <option value="GR">12.- Guerrero (GR)</option>
+                        <option value="HG">13.- Hidalgo (HG)</option>
+                        <option value="JC">14.- Jalisco (JC)</option>
+                        <option value="MC">15.- Estado de México (MC)</option>
+                        <option value="MN">16.- Michoacán (MN)</option>
+                        <option value="MS">17.- Morelos (MS)</option>
+                        <option value="NT">18.- Nayarit (NT)</option>
+                        <option value="NL">19.- Nuevo León (NL)</option>
+                        <option value="OC">20.- Oaxaca (OC)</option>
+                        <option value="PL">21.- Puebla (PL)</option>
+                        <option value="QT">22.- Querétaro (QT)</option>
+                        <option value="QR">23.- Quintana Roo (QR)</option>
+                        <option value="SP">24.- San Luis Potosí (SP)</option>
+                        <option value="SL">25.- Sinaloa (SL)</option>
+                        <option value="SR">26.- Sonora (SR)</option>
+                        <option value="TC">27.- Tabasco (TC)</option>
+                        <option value="TS">28.- Tamaulipas (TS)</option>
+                        <option value="TL">29.- Tlaxcala (TL)</option>
+                        <option value="VZ">30.- Veracruz (VZ)</option>
+                        <option value="YN">31.- Yucatán (YN)</option>
+                        <option value="ZS">32.- Zacatecas (ZS)</option>
+                        <option value="NE">33.- Nacido en el extranjero (NE)</option>
                     </select>
                     <label for="Entidad_Nacimiento">Entidad de nacimiento <span class="obligatorio">* </span> :</label>
                 </div>
