Se implementó la funcionalidad PWA, se agregaron estilos al focus en los botones, se actualizó el archivo README y se creó el archivo LICENCE

--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <link rel="icon" type="image/x-icon" href="img/logo.svg">
     <link rel="stylesheet" href="estilos/normalize.css">
     <link rel="stylesheet" href="estilos/estyles.css">
+    <!-- PWA -->
+    <link rel="manifest" href="manifest.json" />
+    <!-- Soporte para iOS -->
+    <link rel="apple-touch-icon" href="img/pwa_icons/icon-72x72.png"/>
+    <link rel="apple-touch-icon" href="img/pwa_icons/icon-96x96.png"/>
+    <link rel="apple-touch-icon" href="img/pwa_icons/icon-128x128.png"/>
+    <link rel="apple-touch-icon" href="img/pwa_icons/icon-144x144.png"/>
+    <link rel="apple-touch-icon" href="img/pwa_icons/icon-152x152.png"/>
+    <link rel="apple-touch-icon" href="img/pwa_icons/icon-192x192.png"/>
+    <link rel="apple-touch-icon" href="img/pwa_icons/icon-384x384.png"/>
+    <link rel="apple-touch-icon" href="img/pwa_icons/icon-512x512.png"/>
+    <meta name="apple-mobile-web-app-status-bar" content="#fdfdfd"/>
+    <meta name="theme-color" content="#0b57d0"/>
+    <!-- / PWA -->
     <title>Generador de CURP</title>
 </head>
 <!-- Google tag (gtag.js) -->
@@ -39,8 +53,9 @@
                         <li>El CURP generado no es oficial.</li>
                         <li>Este sitio no almacena ningún dato ingresado.</li>
                         <li>Puedes reportar cualquier falla o anomalía en el cálculo al correo <a href="mailto:rodriguez.robles93@gmail.com">rodriguez.robles93@gmail.com</a>.</li>
+                        <li><a target="_blank" href="https://github.com/jrrobles/generador_curp.github.io">GitHub</a></li>
                     </ul>
-                    <p class="version">Versión 1.5.2</p>
+                    <p class="version">Versión 1.6.2</p>
                 </div>
             </div>
             <form action="" class="main formulario">
